<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.garciderick.android.quizzapp.ScoreKeeperFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bcnjshm2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/backgroundshape"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sk_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/solidOrange"
                android:textSize="100sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder_slash"
                android:textColor="@color/solidOrange"
                android:textSize="100sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_questions"
                android:textColor="@color/solidOrange"
                android:textSize="100sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/sk_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/try_again"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</FrameLayout>
