<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.garciderick.android.quizzapp.QuestionThree">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/one_str1"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"/>

                <ImageView
                    android:id="@+id/q3_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:src="@drawable/snorlaxbatman"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryDark"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1">

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioGroup
                            android:id="@+id/q3_rg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:layout_gravity="center_horizontal">

                            <RadioButton
                                android:id="@+id/q3_rb1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/three_str1"/>

                            <RadioButton
                                android:id="@+id/q3_rb2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/three_str2"/>

                            <RadioButton
                                android:id="@+id/q3_rb3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/three_str3"/>

                        </RadioGroup>

                        <Button
                            android:id="@+id/q3_nb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="20dp"
                            android:text="@string/answer_button"
                            android:enabled="false"/>

                    </LinearLayout>

                </ScrollView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
